task BJS2-45124 fixed by comments